force-app/main/default/objects/GB_weather__c/GB_weather__c.object-meta.xml
<CustomObject>
    <description>Used to store weather information for the customer&apos;s local area</description>
    <label>Weather</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weather</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>