force-app/main/default/objects/GB_weather__c/fields/GB_Contact__c.field-meta.xml
<CustomField>
    <fullName>GB_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Weather</relationshipLabel>
    <relationshipName>Weather</relationshipName>
    <type>Lookup</type>
</CustomField>