force-app/main/default/objects/GB_weather__c/fields/GB_contactId__c.field-meta.xml
<CustomField>
    <fullName>GB_contactId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Contact ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>