force-app/main/default/objects/GB_weather__c/fields/GB_Description__c.field-meta.xml
<CustomField>
    <fullName>GB_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>