force-app/main/default/objects/GB_weather__c/fields/GB_iconUrl__c.field-meta.xml
<CustomField>
    <fullName>GB_iconUrl__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Icon URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>