force-app/main/default/objects/GB_weather__c/fields/GB_Temperature__c.field-meta.xml
<CustomField>
    <fullName>GB_Temperature__c</fullName>
    <label>Temperature</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>